--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
   "name": "peakshare",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "node server.js",
+    "dev": "webpack serve --mode development --open",
+    "build": "webpack --mode production",
+    "web": "npm run dev",
+    "expo": "expo start"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@expo/webpack-config": "~19.0.1",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.7",
     "date-fns": "^2.30.0",
     "expo": "~50.0.4",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.1",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
@@ -25,18 +31,34 @@
     "react-native-paper": "^5.11.7",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6",
-    "react-redux": "^9.1.0"
+    "react-native-web-linear-gradient": "^1.1.2",
+    "react-redux": "^9.1.0",
+    "setimmediate": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.9",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-react-native-web": "^0.19.10",
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.2.4"
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "path-browserify": "^1.0.1",
+    "prettier": "^3.2.4",
+    "stream-browserify": "^3.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.90.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "private": true
 }
