--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "expo": "~50.0.4",
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.1",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "1.7.1",
     "react-native-paper": "^5.11.7",
+    "react-native-permissions": "^3.10.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
