--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "scripts": {
     "start": "node server.js",
     "dev": "webpack serve --mode development --open",
-    "build": "webpack --mode production",
+    "build": "node build.js",
     "web": "npm run dev",
-    "expo": "expo start"
+    "expo": "expo start",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "dotenv": "^16.4.1",
+    "webpack": "^5.90.2",
+    "webpack-cli": "^5.1.4",
+    "html-webpack-plugin": "^5.6.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "babel-loader": "^9.1.3",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1",
     "@expo/webpack-config": "~19.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -63,8 +71,6 @@
     "prettier": "^3.2.4",
     "stream-browserify": "^3.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.90.2",
-    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "private": true
