--- a/package.json
+++ b/package.json
@@ -3,23 +3,17 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "dev": "webpack serve --mode development --open",
-    "build": "node build.js",
+    "build": "NODE_ENV=production webpack --mode production",
     "web": "npm run dev",
-    "expo": "expo start",
-    "postinstall": "npm run build"
+    "expo": "expo start"
   },
   "dependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.9",
     "@expo/vector-icons": "^14.0.0",
-    "dotenv": "^16.4.1",
-    "webpack": "^5.90.2",
-    "webpack-cli": "^5.1.4",
-    "html-webpack-plugin": "^5.6.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "babel-loader": "^9.1.3",
-    "file-loader": "^6.2.0",
-    "url-loader": "^4.1.1",
     "@expo/webpack-config": "~19.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -27,13 +21,20 @@
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.7",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-react-native-web": "^0.19.10",
+    "copy-webpack-plugin": "^11.0.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.1",
     "expo": "~50.0.4",
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.1",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.11.1",
+    "file-loader": "^6.2.0",
     "firebase": "^10.7.1",
+    "html-webpack-plugin": "^5.6.0",
+    "path-browserify": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
@@ -51,27 +52,20 @@
     "react-native-web": "~0.19.6",
     "react-native-web-linear-gradient": "^1.1.2",
     "react-redux": "^9.1.0",
-    "setimmediate": "^1.0.5"
+    "setimmediate": "^1.0.5",
+    "stream-browserify": "^3.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.90.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.9",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-react-native-web": "^0.19.10",
-    "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "path-browserify": "^1.0.1",
-    "prettier": "^3.2.4",
-    "stream-browserify": "^3.0.0",
-    "url-loader": "^4.1.1",
-    "webpack-dev-server": "^4.15.1"
+    "prettier": "^3.2.4"
   },
   "private": true
 }
