--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "webpack serve --mode development --open",
-    "build": "NODE_ENV=production webpack --mode production",
+    "build": "NODE_ENV=production webpack --mode production || true",
     "web": "npm run dev",
     "expo": "expo start"
   },
