--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "axios": "^1.6.7",
     "babel-loader": "^9.1.3",
     "babel-plugin-react-native-web": "^0.19.10",
+    "buffer": "^6.0.3",
     "copy-webpack-plugin": "^11.0.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.1",
+    "dotenv-webpack": "^8.0.1",
     "expo": "~50.0.4",
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.1",
@@ -37,7 +39,9 @@
     "file-loader": "^6.2.0",
     "firebase": "^10.7.1",
     "html-webpack-plugin": "^5.6.0",
+    "metro-react-native-babel-preset": "0.77.0",
     "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
@@ -51,7 +55,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-vector-icons": "^10.2.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "react-native-web-linear-gradient": "^1.1.2",
     "react-redux": "^9.1.0",
