--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.9",
+    "@babel/preset-typescript": "^7.23.3",
     "@expo/vector-icons": "^14.0.0",
     "@expo/webpack-config": "~19.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
@@ -67,11 +68,13 @@
     "webpack-dev-server": "^4.15.1"
   },
   "devDependencies": {
+    "@babel/preset-flow": "^7.25.9",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "ignore-loader": "^0.1.2",
     "prettier": "^3.2.4"
   },
   "private": true
